Shopping cart with model mapper

--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -10,7 +10,7 @@
     <form method="post" th:action="@{/user/login}" th:object="${user}">
         <tr>
             <td></t><label for="username">Username</label>:</td>
-            <td><input type="text" id="username" name="username" autofocus="autofocus" th:field="*{name}"/></td>
+            <td><input type="text" id="username" name="username" autofocus="autofocus" th:field="*{username}"/></td>
         </tr>
         <tr>
             <td><label for="password">Password</label>:</td>
